--- a/about.html
+++ b/about.html
@@ -18,20 +18,11 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>即使輸掉一切<br>
     也不要輸掉微笑</p></blockquote>
     Hello，我是<strong>海斌(HB)</strong>，一名技術宅。
-    所在地：廣州
-    生日：08.16
-    愛好：画画、听歌
-    <p></p>
-    
     <h5>Contact</h5>
-
-    <ul>
-        <li><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">廣東體育</a></li>
-        <li><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=15">廣東體育2</a></li>
-        <li><a href="rtsp://123.147.113.84:554/04000001/01000000004000000000000000000304?AuthInfo=xxx&userid=/">CCTV5HD</a></li> 
-        <li><a href="http://pulllive-al.wasu.cn/live/5f995db0ef7661bb556fbc83fb789a46.m3u8">TVB</a></li>
-        <li><a href="http://173.64.66.171/live/viutv.m3u8">Viutv</a></li>
-    </ul>
+    <p>Wechat：[Heaven-Pan](https://hbpoon.github.io/wechat) <p> 
+    <p>Weibo：[Hoi_ban](https://weibo.com/1773645060/profile?topnav=1) <p>
+    <p>Instagram：[94PAN](https://www.instagram.com/94pan) <p>
+    <p></p>
 </div>
 
 <!-- English Version -->
