--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@ header-img: "img/post-bg-rwd.jpg"
     也不要輸掉微笑</p></blockquote>
     Hello，我是<strong>海斌(HB)</strong>，一名技術宅。
     <h5>Contact</h5>
-    <p>Wechat：[Heaven-Pan](https://hbpoon.github.io/wechat) <p> 
-    <p>Weibo：[Hoi_ban](https://weibo.com/1773645060/profile?topnav=1) <p>
-    <p>Instagram：[94PAN](https://www.instagram.com/94pan) <p>
+    <p>Wechat：<a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
+    <p>Weibo：<a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_ban</a> <p>
+    <p>Instagram：<a href="https://www.instagram.com/94pan">94PAN</a> <p>
     <p></p>
 </div>
 
