--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/post-bg-rwd.jpg"
     Hello，我是<strong>海斌(HB)</strong>，一名技術宅。
     <h5>Contact</h5>
     <p>Wechat：<a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
-    <p>Weibo：<a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_ban</a> <p>
+    <p>Weibo：<a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
     <p>Instagram：<a href="https://www.instagram.com/94pan">94PAN</a> <p>
     <p></p>
 </div>
