--- a/posts.html
+++ b/posts.html
@@ -1,27 +1,11 @@
 ---
 layout: page
-title: "About"
+title: "Posts"
 description: "Hey, this is HB."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
-<!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select> -->
 
-<!-- Chinese Version -->
-<div class="zh post-container">
-
-    <!--copied from markdown -->
-    <blockquote><p>即使輸掉一切<br>
-    也不要輸掉微笑</p></blockquote>
-    Hello，我是<strong>海斌(HB)</strong>，一名技術宅。
-    <h5>Contact</h5>
-    <p>Wechat：<a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
-    <p>Weibo：<a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p>Instagram：<a href="https://www.instagram.com/94pan">94PAN</a> <p>
     <p></p>
 </div>
 
