--- a/posts.html
+++ b/posts.html
@@ -6,8 +6,7 @@ header-img: "img/post-bg-rwd.jpg"
 ---
 </head>
 
-<body>
-<table width="800" height="531" border="1" align="center" cellspacing="0">
+<<table width="300" height="531" border="1" align="center" cellspacing="0">
   <tr>
     <td height="80"><div align="center">天桥</div></td>
   </tr>
@@ -18,9 +17,6 @@ header-img: "img/post-bg-rwd.jpg"
     <td height="80"><div align="left">2018/06/18</div></td>
   </tr>
 </table>
-</body>
-</html>
-
 
     <p></p>
 </div>
