--- a/posts.html
+++ b/posts.html
@@ -6,17 +6,16 @@ header-img: "img/post-bg-rwd.jpg"
 ---
 </head>
 
+<body>
+<table width="1080" height="531" border="1" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="80"><div align="center">天桥</div></td>
+    <td height="80"><div align="center"> 天桥</div></td>
   </tr>
   <tr>
-    <td height="379"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tianqiao619.jpg" width="1438" height="1080" /></td>
+    <td height="379"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tianqiao619.jpg" width="1080" height="810" /></td>
   </tr>
   <tr>
     <td height="80"><div align="left">2018/06/18</div></td>
-  </tr>
-</table>
-
     <p></p>
 </div>
 
