--- a/posts.html
+++ b/posts.html
@@ -6,33 +6,25 @@ header-img: "img/post-bg-rwd.jpg"
 ---
 <!DOCTYPE html>
 <html class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Hux - Timeline</title>
-		<link rel="stylesheet" type="text/css" href="css/timeline.css" />
-		<script src="js/modernizr.custom.js"></script>
-	</head>
-	<body>
-		<div class="container" style="margin:0;padding:0;width:100%;">
-			<header>
-			  <h1>&nbsp;</h1>
-			</header>
-			<div class="main">
-				<ul class="cbp_tmtimeline">
-					<li>
-						<div class="cbp_tmlabel">
-						  <h2 id="boxoffice">天桥</h2>
-							<time>2018.06.19</time>
-							<img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg">
-							<ul>
-							  <li>随便拍的天桥，Short on Oneplus 3T</li>
-								<li class="skill"><span class="link"><a target="_blank" href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg">原图</a></span>
-								</li>
-						  </ul>
-						</div>
-					</li>
+</head>
+
+<body>
+<table width="400" height="320" border="1" cellpadding="0" cellspacing="0">
+  <tr>
+    <td><div align="right"></div></td>
+  </tr>
+  <tr>
+    <td height="235"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
+  </tr>
+  <tr>
+    <td>随便拍的天桥，Short on Oneplus 3T</td>
+  </tr>
+</table>
+<div id="apDiv1">
+  <div align="center">18/06/19</div>
+</div>
+</body>
+</html>
 					<!--<li>
 						<div class="cbp_tmlabel">
 							<h2>SENOVA WebApp</h2>
