--- a/posts.html
+++ b/posts.html
@@ -7,19 +7,10 @@ header-img: "img/post-bg-rwd.jpg"
 <!DOCTYPE html>
 <html class="no-js">
 </head>
-#apDiv1 {
-	position: absolute;
-	width: 57px;
-	height: 21px;
-	z-index: 1;
-	left: 339px;
-	top: 16px;
-}
-</style>
 </head>
 
 <body>
-<table width="404" height="320" border="1" cellpadding="0" cellspacing="0">
+<table width="404" height="320" border="1" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="400"><div align="right">18/06/19</div></td>
   </tr>
