--- a/posts.html
+++ b/posts.html
@@ -7,18 +7,16 @@ header-img: "img/post-bg-rwd.jpg"
 <!DOCTYPE html>
 <html class="no-js">
 </head>
-</head>
-
 <body>
-<table width="404" height="320" border="1" align="center" cellpadding="0" cellspacing="0">
+<table width="400" height="300" border="1" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td width="400"><div align="right">18/06/19</div></td>
+    <td width="400" height="30"><div align="right">18/06/19</div></td>
   </tr>
   <tr>
-    <td height="235"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
+    <td height="237"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" align="absmiddle" /></td>
   </tr>
   <tr>
-    <td><div align="center">随便拍的天桥，Short on Oneplus 3T</div></td>
+    <td width="400" height="30"><div align="center">随便拍的天桥，Short on Oneplus 3T</div></td>
   </tr>
 </table>
 </body>
