--- a/posts.html
+++ b/posts.html
@@ -7,16 +7,18 @@ header-img: "img/post-bg-rwd.jpg"
 <!DOCTYPE html>
 <html class="no-js">
 </head>
+</head>
+</head>
 <body>
-<table width="400" height="300" border="1" align="center" cellpadding="0" cellspacing="0">
+<table width="300" height="207" border="0" align="center">
   <tr>
-    <td width="400" height="30"><div align="right">18/06/19</div></td>
+    <td width="400" height="10">&nbsp;</td>
   </tr>
   <tr>
-    <td height="237"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" align="absmiddle" /></td>
+    <td height="156"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="300" height="156" align="absmiddle" /></a></td>
   </tr>
   <tr>
-    <td width="400" height="30"><div align="center">随便拍的天桥，Short on Oneplus 3T</div></td>
+    <td width="300" height="30"><div align="center">随便拍的天桥</div></td>
   </tr>
 </table>
 </body>
