--- a/posts.html
+++ b/posts.html
@@ -7,20 +7,10 @@ header-img: "img/post-bg-rwd.jpg"
 <!DOCTYPE html>
 <html class="no-js">
 </head>
-</head>
-</head>
 <body>
-<table width="300" height="207" border="0" align="center">
-  <tr>
-    <td width="400" height="10">&nbsp;</td>
-  </tr>
-  <tr>
-    <td height="156"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="300" height="156" align="absmiddle" /></a></td>
-  </tr>
-  <tr>
-    <td width="300" height="30"><div align="center">随便拍的天桥</div></td>
-  </tr>
-</table>
+<p><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="300" height="156" />
+</p>
+<p>手机随拍1</p>
 </body>
 </html>
 
