--- a/posts.html
+++ b/posts.html
@@ -18,19 +18,18 @@ header-img: "img/tag-bg.jpg"
         </div>
     </div>
 </header>
-<table width="300" border="0">
+</head>
+
+<body>
+<table width="300" border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td width="55">&nbsp;</td>
-    <td width="112">&nbsp;</td>
-    <td width="214"><div align="right">18/06/19</div></td>
-    <td width="7">&nbsp;</td>
+    <td><div align="right"></div></td>
   </tr>
   <tr>
-    <td colspan="4"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
+    <td><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="300" height="156" /></a></td>
   </tr>
   <tr>
-    <td colspan="3">手机随拍1</td>
-    <td>&nbsp;</td>
+    <td><div align="left">手机随拍1</div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
