--- a/posts.html
+++ b/posts.html
@@ -21,12 +21,12 @@ header-img: "img/tag-bg.jpg"
 </head>
 
 <body>
-<table width="300" border="0" cellpadding="0" cellspacing="0">
+<table width="300" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td><div align="right"></div></td>
   </tr>
   <tr>
-    <td><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="300" height="156" /></a></td>
+    <td><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="300" height="156" align="absmiddle" /></a></td>
   </tr>
   <tr>
     <td><div align="left">手机随拍1</div></td>
