--- a/posts.html
+++ b/posts.html
@@ -15,9 +15,8 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>即使輸掉一切<br>
-    也不要輸掉微笑</p></blockquote>
-    Hello，我是<strong>海斌(HB)</strong>，一名技術宅。
+    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
+    一名技術宅</p></blockquote>
     <h5>Contact</h5>
     <p><strong>Wechat:</strong><a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
     <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
