--- a/about.html
+++ b/about.html
@@ -15,13 +15,12 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>即使輸掉一切<br>
-    也不要輸掉微笑</p></blockquote>
-    Hello，我是<strong>海斌(HB)</strong>，一名技術宅。
+    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
+    一名技術宅</p></blockquote>
     <h5>Contact</h5>
-    <p>Wechat：<a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
-    <p>Weibo：<a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p>Instagram：<a href="https://www.instagram.com/94pan">94PAN</a> <p>
+    <p><strong>Wechat:</strong><a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
+    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
+    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p>
     <p></p>
 </div>
 
@@ -29,15 +28,11 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
-
     <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
     
     <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
-
     <h5>Talks</h5>
-
     <ul>
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
@@ -52,10 +47,8 @@ header-img: "img/post-bg-rwd.jpg"
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
     var $select = document.querySelector("select");
-
     // bind hashchange event
     window.addEventListener('hashchange', _render);
-
     // handle render
     function _render(){
         var _hash = window.location.hash;
@@ -72,7 +65,6 @@ header-img: "img/post-bg-rwd.jpg"
             $en.style.display = "none";
         }
     }
-
     // handle select change
     function onLanChange(index){
         if(index == 0){
@@ -81,7 +73,6 @@ header-img: "img/post-bg-rwd.jpg"
             window.location.hash = "#en"
         }
     }
-
     // init
     _render();
 </script>
@@ -124,7 +115,6 @@ header-img: "img/post-bg-rwd.jpg"
     var disqus_shortname = "{{site.disqus.username}}";
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
     var disqus_url = "{{site.url}}{{page.url}}";
-
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -133,4 +123,3 @@ header-img: "img/post-bg-rwd.jpg"
 </script>
 <!-- disqus 公共JS代码 end -->
 {% endif %}
-
