--- a/posts.html
+++ b/posts.html
@@ -14,15 +14,12 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
-    <!--copied from markdown -->
-    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
-    一名技術宅</p></blockquote>
-    <h5>Contact</h5>
-    <p><strong>Wechat:</strong><a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
-    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p>
-    <p></p>
-</div>
+</head>
+
+<body>
+<div align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" />
+</body>
+</html>
 
 <!-- English Version -->
 <!-- <div class="en post-container">
