--- a/posts.html
+++ b/posts.html
@@ -17,7 +17,14 @@ header-img: "img/post-bg-rwd.jpg"
 </head>
 
 <body>
-<div align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" />
+<div align="center"><table width="400" height="268" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td width="400" height="235"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
+  </tr>
+  <tr>
+    <td height="32"><p>手机随拍</p></td>
+  </tr>
+</table>
 </body>
 </html>
 
