--- a/posts.html
+++ b/posts.html
@@ -22,7 +22,8 @@ header-img: "img/post-bg-rwd.jpg"
     <td width="400" height="235"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
   </tr>
   <tr>
-    <td height="32"><p>手机随拍</p></td>
+    <td height="32"><p align="center">手机随拍</p>
+    <p align="center">18/06/19</p></td>
   </tr>
 </table>
 </body>
