--- a/posts.html
+++ b/posts.html
@@ -17,13 +17,14 @@ header-img: "img/post-bg-rwd.jpg"
 </head>
 
 <body>
-<div align="center"><table width="400" height="268" border="0" cellpadding="0" cellspacing="0">
+<table width="400" border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td width="400" height="235"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
+    <td><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/APtianqiao1.jpg" width="400" height="235" /></td>
   </tr>
   <tr>
-    <td height="32"><p align="center">手机随拍</p>
-    <p align="center">18/06/19</p></td>
+    <td height="53">手机随拍   
+    <br>
+    18/06/19</p></td>
   </tr>
 </table>
 </body>
