--- a/posts.html
+++ b/posts.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "posts"
-description: "Hey, this is HB."
-header-img: "img/bg3.jpg"
+title: "Posts"
+description: ""
+header-img: "img/bg4.jpg"
 ---
 
 <!-- Language Selector -->
