--- a/media.html
+++ b/media.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "media"
+title: "Media"
 description: ""
 header-img: "img/bg3.jpg"
 ---
@@ -56,7 +56,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://183.207.248.71/cntv/live1/HD-2500k-1080P-cctv5/HD-2500k-1080P-cctv5"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不穩定，需複製連接到播放器</div></td>
+    <td><div align="center">不穩定</div></td>
   </tr>
 </table>
 </body>
