--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/bg1.jpg"
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
     一名技術宅</p></blockquote>
     <h5>Contact</h5>
-    <p><strong>Wechat:</strong><a href="https://hbpoon.github.io/wechat">Heaven-Pan</a> <p> 
+    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
     <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
     <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p>
     <p></p>
