--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "爲你壞習慣都改"
+description: "如果很怕黑，就比黑更黑"
 ---
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=0&id=517171111&auto=1&height=430"></iframe>
 {% for post in paginator.posts %}
