--- a/media.html
+++ b/media.html
@@ -53,7 +53,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">CCTV-5</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://183.207.248.71/cntv/live1/HD-2500k-1080P-cctv5/HD-2500k-1080P-cctv5"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://124.224.238.170/PLTV/88888888/224/3221225890/10000100000000060000000000725782_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
