--- a/posts.html
+++ b/posts.html
@@ -18,7 +18,7 @@ header-img: "img/bg4.jpg"
 
 <body>
 
-<div align="center"><table width="400" height="311" border="0">
+<table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">珠江新城</div></td>
   </tr>
@@ -36,7 +36,7 @@ header-img: "img/bg4.jpg"
 
 
 
-<div align="center"><table width="400" height="311" border="0">
+<table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">珠江新城</div></td>
   </tr>
