--- a/media.html
+++ b/media.html
@@ -34,6 +34,7 @@ header-img: "img/bg3.jpg"
 </body>
 </html>
 
+
 <table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">廣東體育（2）</div></td>
@@ -43,20 +44,6 @@ header-img: "img/bg3.jpg"
   </tr>
   <tr>
     <td><div align="center">需要長按複製連接到播放器</div></td>
-  </tr>
-</table>
-</body>
-</html>
-
-<table width="400" height="311" border="0">
-  <tr>
-    <td width="397"><div align="center">CCTV-5</div></td>
-  </tr>
-  <tr>
-    <td height="237"><a href="http://124.224.238.170/PLTV/88888888/224/3221225890/10000100000000060000000000725782_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
-  </tr>
-  <tr>
-    <td><div align="center">不穩定</div></td>
   </tr>
 </table>
 </body>
@@ -77,6 +64,23 @@ header-img: "img/bg3.jpg"
 </body>
 </html>
 
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">CCTV-5</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://124.224.238.170/PLTV/88888888/224/3221225890/10000100000000060000000000725782_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">不穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+
 <table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">翡翠台</div></td>
@@ -90,6 +94,67 @@ header-img: "img/bg3.jpg"
 </table>
 </body>
 </html>
+
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">ViuTV</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/471a413f4ed95b690a2662e16a343ed5.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">暫停更新</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">廣東珠江</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="rtsp://125.88.54.18/PLTV/88888905/224/3221227004/00000100000000060000000000554900_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDZJ.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">愛上4K</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">鬆視2</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://59.124.220.46:554/live/tv284198321.stream/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/ss2.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">一般穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
 
 
 <!-- English Version -->
