--- a/media.html
+++ b/media.html
@@ -54,8 +54,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣東體育(3)</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://mgzb.live.miguvideo.com:8088/wd_r1/fifa/gdtyhd/720264/encrypt/01.m3u8?msisdn=13140574124&mdspid=&spid=800033&netType=4&sid=7500001477&pid=2028597139&timestamp=20180619194620&Channel_ID=25000203-99000-200300220100002&ProgramID=642167150&ParentNodeID=-99&assertID=7500001477&client_ip=114.236.245.253&SecurityKey=20180619194620&imei=867883032424443&promotionId=&mvid=7500001310&mcid=500020&mpid=62&mtv_session=1ccb41243f950f3dd4d26105edb76244&jid=E60AE8E53FA3F8100C1330BA88AFE0721529408783975V&LegoPageID=WC-LIVE&sjid=subsession_1529408784026&HlsSubType=1&HlsProfileId=1&nphaid=0&encrypt=2bfeecebaf061700cd23bc74b68c85a3
-"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://qt1.alivecdn.com/sei/stream2063154.flv"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">標清</div></td>
