--- a/media.html
+++ b/media.html
@@ -54,8 +54,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣東體育(3)</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtmp://live.ewqok.cn/888/456852753951@http://hls.live.ewqok.cn/888/456852753951/index.m3u8
-"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://hls.live.ewqok.cn/888/456852753951/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">標清</div></td>
