--- a/media.html
+++ b/media.html
@@ -84,7 +84,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">CCTV-5+</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtsp://113.136.42.39:554/PLTV/88888888/224/3221226039/10000100000000060000000001598747_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
@@ -114,10 +114,26 @@ header-img: "img/bg3.jpg"
 
 <table width="400" height="311" border="0">
   <tr>
+    <td width="397"><div align="center">TVB</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/46e48f30aab8e7ab1b8951f55e9c83f5.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">不穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+
+<table width="400" height="311" border="0">
+  <tr>
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/471a413f4ed95b690a2662e16a343ed5.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="rtmp://al1-hls.live.huajiao.com:1935/live/1529330229?k=98B59897BE213AAFC6819487.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">暫停更新</div></td>
