--- a/media.html
+++ b/media.html
@@ -27,7 +27,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&amp;FvSeid=&amp;Pcontent_id=&amp;Provider_id=&amp;Fsv_chan_hls_se_idx=15"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">延遲2-3分鐘
+    <td><div align="center">延遲，世界盃直播期間可能無法播放。
     </div></td>
   </tr>
 </table>
@@ -43,7 +43,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE2.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">需要長按複製連接到播放器</div></td>
+    <td><div align="center">世界盃直播期間冇信號，需要長按複製連接到播放器</div></td>
   </tr>
 </table>
 </body>
@@ -57,7 +57,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://hls.live.ewqok.cn/888/9512684/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">標清</div></td>
+    <td><div align="center">不定期更新</div></td>
   </tr>
 </table>
 </body>
@@ -72,7 +72,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://124.224.238.170/PLTV/88888888/224/3221225890/10000100000000060000000000725782_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不穩定</div></td>
+    <td><div align="center">需要長按複製連接到播放器</div></td>
   </tr>
 </table>
 </body>
@@ -87,7 +87,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不穩定</div></td>
+    <td><div align="center">需要長按複製連接到播放器</div></td>
   </tr>
 </table>
 </body>
@@ -120,7 +120,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://pulllive-al.wasu.cn/live/46e48f30aab8e7ab1b8951f55e9c83f5.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不穩定</div></td>
+    <td><div align="center">不定期更新</div></td>
   </tr>
 </table>
 </body>
@@ -136,7 +136,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="rtmp://al1-hls.live.huajiao.com:1935/live/1529330229?k=98B59897BE213AAFC6819487.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">暫停更新</div></td>
+    <td><div align="center">不定期更新</div></td>
   </tr>
 </table>
 </body>
@@ -181,7 +181,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://59.124.220.46:554/live/tv284198321.stream/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/ss2.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">一般穩定</div></td>
+    <td><div align="center">18+</div></td>
   </tr>
 </table>
 </body>
