--- a/media.html
+++ b/media.html
@@ -151,7 +151,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="rtsp://125.88.54.18/PLTV/88888905/224/3221227004/00000100000000060000000000554900_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDZJ.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">穩定</div></td>
+    <td><div align="center">不穩定</div></td>
   </tr>
 </table>
 </body>
@@ -166,7 +166,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">穩定</div></td>
+    <td><div align="center">需要長按複製連接到播放器</div></td>
   </tr>
 </table>
 </body>
