--- a/media.html
+++ b/media.html
@@ -130,6 +130,23 @@ header-img: "img/bg3.jpg"
 
 <table width="400" height="311" border="0">
   <tr>
+    <td width="397"><div align="center">無綫新聞</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/434e8a36-799a-11e8-a2e2-005056903a13/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=eccb2ae99ecba0fb157f8d673e7de11d_1530142809_1530142809"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">不定期更新</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+
+
+<table width="400" height="311" border="0">
+  <tr>
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
