--- a/media.html
+++ b/media.html
@@ -27,7 +27,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&amp;FvSeid=&amp;Pcontent_id=&amp;Provider_id=&amp;Fsv_chan_hls_se_idx=15"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">延遲，世界盃直播期間可能無法播放。
+    <td><div align="center">延遲，世界盃直播期間可能無法播放
     </div></td>
   </tr>
 </table>
@@ -117,7 +117,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/a99961fc979a06e6893bdc2c2b8d4895.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/1afd123d4af7e2b601a8bc06afa17323.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
