--- a/media.html
+++ b/media.html
@@ -54,7 +54,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣東體育(3)</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://hls.live.ewqok.cn/888/9512684/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="rtsp://183.59.205.115:554/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -165,7 +165,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣東珠江</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtsp://125.88.54.18/PLTV/88888905/224/3221227004/00000100000000060000000000554900_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDZJ.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=16"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDZJ.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
@@ -173,6 +173,45 @@ header-img: "img/bg3.jpg"
 </table>
 </body>
 </html>
+
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">廣東公共</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=17"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDGG.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">不穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <table width="400" height="311" border="0">
