--- a/media.html
+++ b/media.html
@@ -134,7 +134,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/723bb2b1efb7a6428830c8e13a53b6ad.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/520d9b217ec9a330a7741fe72f2b1041.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -150,7 +150,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">無綫新聞</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/434e8a36-799a-11e8-a2e2-005056903a13/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=eccb2ae99ecba0fb157f8d673e7de11d_1530142809_1530142809"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/094fe130-7a63-11e8-8c85-005056b12cf7/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=45281539cb0216bad321013f1e60e65c_1530229041_1530229041"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -243,7 +243,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">珠江電影</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=23"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/ZJDY.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=23"><img src="https://github.com/hbpoon/hbpoon.github.io/blob/master/img/GJDY.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
