--- a/media.html
+++ b/media.html
@@ -243,7 +243,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">珠江電影</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=23"><img src="https://github.com/hbpoon/hbpoon.github.io/blob/master/img/GJDY.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=23"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GJDY.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
