--- a/media.html
+++ b/media.html
@@ -182,7 +182,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣州台</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=1"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/gz.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=2"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/gz.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
@@ -191,6 +191,20 @@ header-img: "img/bg3.jpg"
 </body>
 </html>
 
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">廣州新聞</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=1"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GZXW.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">不穩定</div></td>
+  </tr>
+</table>
+</body>
+</html>
 
 
 <table width="400" height="311" border="0">
@@ -225,10 +239,10 @@ header-img: "img/bg3.jpg"
 
 <table width="400" height="311" border="0">
   <tr>
-    <td width="397"><div align="center">廣東佛山</div></td>
+    <td width="397"><div align="center">佛山公共</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=23"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/FSGG.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=24"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/FSGG.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
