--- a/media.html
+++ b/media.html
@@ -134,7 +134,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/bb054c38e179e467177b1a7bc3838b4b.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/84b8945a108a5fe860849ebebc616fa2.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
