--- a/media.html
+++ b/media.html
@@ -54,7 +54,8 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣東體育(3)</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtsp://183.59.205.115:554/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pili-live-hdl.liveh2.sobeycache.com/huizhou/s10001.flv
+"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
