--- a/media.html
+++ b/media.html
@@ -54,8 +54,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">廣東體育(3)</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pili-live-hdl.liveh2.sobeycache.com/huizhou/s10001.flv
-"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pull.talk-cloud.com/live/3825398.flv"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
